# sm-webscraper

./: .gitignore  Makefile  axs-webscraper.py  pyproject.toml
flake/: devshells.nix
scripts/: package.sh
scripts/macos/: sanitize
src/: main.py
